[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/Nodes/ValueSlider.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/PerspectiveEditor/VanishingPoint.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Nodes/CollapsibleContainer.tscn" type="PackedScene" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;


void fragment() {
	vec4 color = texture(TEXTURE, UV);
	COLOR = color;
	vec3 inverted = vec3(1.0) - color.rgb;
	vec3 screen_color = textureLod(SCREEN_TEXTURE, SCREEN_UV, 0.0).rgb;
	float screen_avg = (screen_color.r + screen_color.g + screen_color.b) / 3.0;
	
	COLOR.rgb = inverted * step(0.5, screen_avg) + color.rgb * step(screen_avg, 0.5);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[node name="VanishingPoint" type="VBoxContainer" groups=["Entry"]]
margin_right = 261.0
margin_bottom = 145.0
script = ExtResource( 2 )

[node name="TitleContainer" type="HBoxContainer" parent="."]
margin_right = 261.0
margin_bottom = 20.0

[node name="Title" type="Label" parent="TitleContainer"]
unique_name_in_owner = true
material = SubResource( 2 )
margin_top = 3.0
margin_right = 207.0
margin_bottom = 17.0
size_flags_horizontal = 3
theme_type_variation = "Header"
text = "Point: a"
valign = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="TitleContainer"]
unique_name_in_owner = true
margin_left = 211.0
margin_right = 261.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )

[node name="PointInfo" type="HBoxContainer" parent="."]
margin_top = 24.0
margin_right = 261.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 45 )

[node name="Panel" type="Panel" parent="PointInfo"]
self_modulate = Color( 1, 1, 1, 0.862745 )
margin_right = 105.0
margin_bottom = 52.0
rect_min_size = Vector2( 105, 0 )

[node name="Label" type="Label" parent="PointInfo/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 5
text = "Position:"
align = 1
valign = 1

[node name="Position" type="VBoxContainer" parent="PointInfo"]
margin_left = 109.0
margin_right = 261.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="X" parent="PointInfo/Position" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_right = 152.0
step = 0.5
allow_greater = true
allow_lesser = true
prefix = "X :"

[node name="Y" parent="PointInfo/Position" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_top = 28.0
margin_right = 152.0
margin_bottom = 52.0
step = 0.5
allow_greater = true
allow_lesser = true
prefix = "Y :"

[node name="CollapsibleContainer" parent="." instance=ExtResource( 3 )]
margin_top = 80.0
margin_right = 261.0
margin_bottom = 100.0
text = "Lines"

[node name="HBoxContainer" type="HBoxContainer" parent="CollapsibleContainer"]
visible = false
margin_top = 24.0
margin_right = 261.0
margin_bottom = 44.0

[node name="Spacer" type="Control" parent="CollapsibleContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 20.0
rect_min_size = Vector2( 60, 0 )

[node name="LinesContainer" type="VBoxContainer" parent="CollapsibleContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 64.0
margin_right = 261.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddLine" type="Button" parent="CollapsibleContainer/HBoxContainer/LinesContainer"]
margin_right = 197.0
margin_bottom = 20.0
text = "Add Line"

[node name="Delete" type="Button" parent="."]
margin_top = 104.0
margin_right = 261.0
margin_bottom = 124.0
rect_min_size = Vector2( 40, 0 )
text = "Delete Point"

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 128.0
margin_right = 261.0
margin_bottom = 138.0
custom_constants/separation = 10

[connection signal="pressed" from="CollapsibleContainer/HBoxContainer/LinesContainer/AddLine" to="." method="_on_AddLine_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
